--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -105,9 +105,10 @@
 }
 .educationSeperator {
     margin-left: auto;
-    margin-right:5.875rem;
+    margin-right:5.75rem;
+    z-index: 5;
     display: flex;
-    margin-top: 4rem;
+    margin-top: 4.25rem;
 }
 .educationSeperatorWrapper {
     width: auto;
@@ -132,6 +133,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 121.98%; /* 29.275px */
+    padding-top: 2px;
    // letter-spacing: -0.25px;
     text-transform: capitalize;
     min-width: 16.83rem;
@@ -147,7 +149,7 @@
         min-height: 4.4rem;
     }
     &:nth-of-type(3) {
-        margin-left: 1.75rem;
+        margin-left: 1.5rem;
 
         background-image: url('../public/assets/category3.svg');
     }
@@ -166,7 +168,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 6.625rem;
+    margin-top: 6.25rem;
     height: fit-content;
     padding-bottom: 4rem;
 }
