--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -4,6 +4,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    padding-bottom: 2.25rem;
 }
 .educationTopContainer {
     width: 100%;
