--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -26,7 +26,7 @@
    // background-color: red;
     padding-left: 5.75rem;
     //padding-top: 1.875rem;
-    padding-top: 1.25rem;
+    padding-top: 1.75rem;
     max-width: 48%;
     width: fit-content;
     height: 100%;
@@ -123,6 +123,10 @@
     line-height: 120%;
     letter-spacing: -1.5px;
     text-transform: uppercase;
+    background-image: url('../public/assets/notion0.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   
   }
   .heroButtonApplyV2 {
@@ -131,7 +135,7 @@
     height: 4.5rem;
     flex-shrink: 0;
     border: 4.5px solid #ECCAB1;
-    background: #dd8d55c5;
+    background: #db8b53c5;
     //align-items: center;
     display: flex;
    // gap:1.325rem;
@@ -142,7 +146,7 @@
   
    // justify-content: center;
     border-radius: 121px;
-    filter: drop-shadow(0px 0px 10px rgba(227, 166, 121, 1));
+    filter: drop-shadow(0px 0px 10px rgb(232, 168, 123));
     transition: all .2s linear;
    // box-shadow: 0px 12px 4px 0px rgb(28, 28, 28, .25);
   }
@@ -170,7 +174,7 @@
   }
   .propositionContainer {
     background: #5b6249;
-    background: linear-gradient(0deg, #252525 0%, rgba(139, 139, 139, 0.00) 30%, #5b6249 60%);
+    background: linear-gradient(0deg, #252525 20%, rgba(139, 139, 139, 0.00)50%, #5b6249 90%);
     //background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
     height: fit-content; // set to 100vh maybe
     width: 100%;
@@ -213,18 +217,20 @@
     font-style: normal;
     font-weight: 500;
     line-height: 134%; /* 134.286% */
-    letter-spacing: 0.75px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     margin-left: auto;
     margin-right: auto;
+    transform: scaleY(.99);
 }
 .notionContainerTop {
   //flex-shrink: 0;
   border-radius: 7.5px;
   width: 42.125rem;
   height: 30.5rem;
-  background-color: #252525;
-  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
+  background-color:#414B44;
+  box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.3);
+//  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
   margin-left: auto;
   margin-right: 5.7rem;
   display: flex;
@@ -233,7 +239,7 @@
   background-image: url('../public/assets/notion4.svg');
   background-position: center;
 
-  //background-size: cover;
+  background-size: cover;
   background-repeat: no-repeat;
  // background-size: auto;
 }
@@ -243,7 +249,7 @@
   width: 42.125rem;
   height: 30.5rem;
   background-color: #252525;
-  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.4);
   margin-left: auto;
   margin-right: 5.7rem;
   display: flex;
@@ -275,4 +281,114 @@
 .notionImage {
 transform: translateX(-3.125%) translateY(-2.75%);
   position: absolute;
+}
+.formSection {
+  height: fit-content;
+  width: 100%;
+//  margin-top: 9.125rem;
+  margin-top: 9rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 6.925rem;
+}
+.formHeaderContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3.125rem;
+  align-self: center;
+  width: 53.95%;
+  //width: 48.56rem;
+  height: auto;
+}
+.formHeaderText {
+  color: #FAF3D6;
+  text-align: center;
+  text-shadow: 0px 1.5px 8.025px rgba(250, 243, 214, 0.4);
+  font-family: "Helvetica Neue";
+  font-size: clamp(3.2rem, 5vw, 4.2rem);
+  font-style: normal;
+  font-weight: 300;
+  line-height: 120.781%; /* 81.527px */
+  letter-spacing: -1.35px;
+}
+.formHeaderSubtext {
+ // display: flex;
+ // flex-direction: column;
+
+ // align-items: center;
+  margin-left: auto;
+ // font-size: clamp(1.325rem, 3vw, 1.65rem);
+  margin-right: auto;
+ // align-self: center;
+}
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  height: fit-content;
+  align-items: center;
+  padding-top: 2.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.formWrapper {
+  height: 14.55rem;
+  width: 40.105rem;
+  background: rgba(255, 255, 255, 0.13);
+  flex-shrink: 0;
+  border-radius: 27px;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+  justify-content: space-evenly;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.formInputField {
+  //width: 89.88%;
+  //height: 24.14%;
+  width: 90%;
+  height: 24%;
+  background: rgba(217, 217, 217, 0.30);
+  border: 1.25px solid #FFF;
+  border-radius: 19.5px;
+  flex-shrink: 0;
+  align-self: center;
+}
+.inputField {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  outline:none;
+  border:none;
+  padding-left: 1.5rem;
+  display: flex;
+ // padding-top: .425rem;
+  font-size: clamp(1.125rem, 2vw, 1.35rem);
+  color: #000;
+
+}
+.inputField::placeholder {
+  color: #404040;
+  font-family: Helvetica Neue;
+  font-weight: 500;
+  font-size: clamp(1.125rem, 2vw, 1.35rem)
+}
+
+.footerButtonAlt {
+  
+}
+.footerButtonAlt:hover {
+  background-color: #FAF3D6;
+  color: #0a0a0a;
+  border: 4px solid #c8c09e;
+  font-weight: 500;
+}
+.footerButtonAlt:hover .footerArrow{
+  filter: invert(1);
 }
