--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -967,7 +967,7 @@ padding-bottom: 5rem;
 }
 .footerContent {
   //height: 39.66vh;
-  height: 19.30rem;
+  height: 19.3rem;
   width: 100%;
   //margin-top: 7.89vh;
  // margin-top: 3.84rem;
@@ -1052,7 +1052,7 @@ padding-bottom: 5rem;
  border-top-left-radius: 37.5px;
  border-bottom-left-radius: 37.5px;
 
- width: 44%;
+ width: 44.25%;
  margin-left: auto;
   height: 100%;
   //transform: translateX(6.45vw);
@@ -1060,11 +1060,11 @@ padding-bottom: 5rem;
   align-items: center;
   justify-content: center;
  // margin-left: auto;
- border-bottom: 1px solid #FAF3D6;
- border-left: 1px solid #FAF3D6;
- border-top: 1px solid #FAF3D6;
- // border: 1px solid #FAF3D6;
-  background-color: #252525;
+ //border-bottom: 1px solid #FAF3D6;
+ //border-left: 1px solid #FAF3D6;
+ //border-top: 1px solid #FAF3D6;
+  //border: 1px solid #FAF3D6;
+ // background-color: #252525;
 }
 .pricingForeground {
  // width: 119.635vw;
