--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -36,17 +36,19 @@
     width: 100%;
     //background-color: red;
     min-height: auto;
-    margin-left: 5.5rem;
+   // margin-left: 5.5rem;
+    margin-left: 6.111%;
     z-index: 2;
     //margin-top: 1rem;
    // justify-content: space-evenly;
 }
 .propositionTopLeft {
     display: flex;
-    align-items: flex-start;
+   // align-items: flex-start;
     justify-content: center;
     width: 40%;
-
+  //  padding-left: 2.5%;
+    align-self: flex-start;
    // padding-top: 1.125rem;
    // padding-left: .875rem;
     height: 100%;
@@ -208,10 +210,13 @@
    // height: 62.77vh;
    margin-bottom: 13.125rem;
    margin-top: 11.2rem;
+   //background-color: red;
   // margin-top: 12.1625rem;
-   //margin-bottom: 12.1625rem;
+  // margin-bottom: 12.1625rem;
     height: fit-content;
+   // gap:1rem;
     display: flex;
+    //justify-content: space-around;
   //  background-color: rgba(128, 0, 128, 0.8);
 }
 .midWrapperLeft {
@@ -220,9 +225,11 @@
     display: flex;
     z-index: 1;
     width: 55%;
-    
+   // margin-left: 6.11%;
+    margin-left: 6.33%;
+    justify-content: flex-start;
   //  outline:1px solid #FAF3D6;
-   // background-color: #252525;
+  // background-color: #252525;
 }
 .midImageLeft {
     max-width: 50%;
@@ -241,6 +248,7 @@
     max-width: 50%;
     height: 100%;
     display: flex;
+    
     align-items: center;
     justify-content: center;
   //  border-left: 1px dashed #FAF3D6;
@@ -253,14 +261,15 @@
     //margin-left: auto;
   //  width: auto;
     width: 45%;
-    justify-content: flex-end;
+   // justify-content: flex-end;
 
-    padding-right: 5rem;
+    //padding-right: 5.7rem;
+    padding-right: 6.33%;
    // width: 39.75vw;
    // padding-left: .25vw;
     height: 100%;
    // align-items: flex-end;
-   // justify-content: flex-end;
+    justify-content: center;
     display: flex;
     //background-color: rgba(0, 0, 255, 0.2);
 }
