--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -1,11 +1,11 @@
 .contentContainerV2 {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     width: 100%;
     align-items: center;
     //min-height: 100vh;
   //  max-height:  100vh;
-
+    
     min-height: 100vh;
     //padding-bottom: 4rem;
     //padding-top: 2.125rem;
@@ -26,8 +26,10 @@
    // background-color: red;
     padding-left: 5.75rem;
     //padding-top: 1.875rem;
-    padding-top: 1.75rem;
-    max-width: 48%;
+    padding-top: 1rem;
+   // max-width: 48%;
+    max-width: 43.2rem;
+
     width: fit-content;
     height: 100%;
     display: flex;
@@ -89,9 +91,9 @@
 
 
 .contentContainerAltV2 {
-    width: 55%;
-
-  //  background-color: blue;
+    //width: 55%;
+    width: 49.5rem;
+   // background-color: blue;
    // background-color: rgba(0, 255, 94, 0.192);
     height: 100%;
     padding-left: 2rem;
@@ -233,6 +235,7 @@
 //  box-shadow: 8.25px 15.75px 30.375px 0px rgba(0, 0, 0, 0.25);
   margin-left: auto;
   margin-right: 5.7rem;
+ // margin-right: 6.33%;
   display: flex;
   align-items: flex-end;
   padding-bottom: 3.51rem;
@@ -250,8 +253,8 @@
   height: 30.5rem;
   background-color: #252525;
   box-shadow: 10.25px 17.75px 30.375px 0px rgba(0, 0, 0, 0.4);
-  margin-left: auto;
-  margin-right: 5.7rem;
+  //margin-left: auto;
+  //margin-right: 5.7rem;
   display: flex;
   align-items: flex-end;
   padding-bottom:1.5rem;
@@ -391,4 +394,12 @@ transform: translateX(-3.125%) translateY(-2.75%);
 }
 .footerButtonAlt:hover .footerArrow{
   filter: invert(1);
+}
+.footerImage {
+  background-image: url('../public/photos/pr-andrew.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
