--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -952,6 +952,8 @@ padding-bottom: 5rem;
 .footerContainer {
   
   //max-height: 55.45vh;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
   height: 26.0625rem;
  // height: auto;
   //width: 111.927vw;
@@ -1060,6 +1062,8 @@ padding-bottom: 5rem;
   align-items: center;
   justify-content: center;
  // margin-left: auto;
+ border:none;
+ overflow: hidden;
  //border-bottom: 1px solid #FAF3D6;
  //border-left: 1px solid #FAF3D6;
  //border-top: 1px solid #FAF3D6;
@@ -2739,7 +2743,7 @@ padding-bottom: 5rem;
     align-items: center;
     justify-content: center;
    // margin-left: auto;
-    border: 1px solid #FAF3D6;
+   // border: 1px solid #FAF3D6;
     background-color: #252525;
   }
 
@@ -4135,7 +4139,7 @@ padding-bottom: 5rem;
     align-items: center;
     justify-content: center;
    // margin-left: auto;
-    border: 1px solid #FAF3D6;
+   // border: 1px solid #FAF3D6;
     background-color: #252525;
   }
 
@@ -5529,7 +5533,7 @@ padding-bottom: 5rem;
     align-items: center;
     justify-content: center;
    // margin-left: auto;
-    border: 1px solid #FAF3D6;
+   // border: 1px solid #FAF3D6;
     background-color: #252525;
   }
 
@@ -6980,7 +6984,7 @@ padding-bottom: 5rem;
     align-items: center;
     justify-content: center;
    // margin-left: auto;
-    border: 1px solid #FAF3D6;
+  //  border: 1px solid #FAF3D6;
     background-color: #252525;
   }
 }
@@ -8230,7 +8234,7 @@ padding-bottom: 5rem;
     align-items: center;
     justify-content: center;
    // margin-left: auto;
-    border: 1px solid #FAF3D6;
+  //  border: 1px solid #FAF3D6;
     background-color: #252525;
   }
 
@@ -9333,7 +9337,7 @@ padding-bottom: 5rem;
     align-items: center;
     justify-content: center;
    // margin-left: auto;
-    border: 1px solid #FAF3D6;
+   // border: 1px solid #FAF3D6;
     background-color: #252525;
   }
   .footerLeftContent {
