--- a/app/globals.css
+++ b/app/globals.css
@@ -101,7 +101,9 @@ body {
  /*background: linear-gradient(180deg,#7c8874 ,#686f4f 4.75%, #2e392e 11.75%);*/
  /* background: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 3%, #2e392e 8%);*/
  /* background:linear-gradient(rgba(158,186,158,.58));*/
- background: #666C56;
+ /*background: #666C56;*/
+ background: #535c40;
+ /*background: #4e543d;*/
   
 }
 
