--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -539,7 +539,7 @@
 .caseStudiesButton {
    // width: 19.25rem;
     width: 20.25rem;
-    height: 4.5rem;
+    min-height: 4.5rem;
     //flex-shrink: 0;
     border-radius: 90.75px;
     border: 2px solid #F9F9F9;
