--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -5,7 +5,11 @@
     align-items: center;
     //min-height: 100vh;
   //  max-height:  100vh;
-    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-clip: content-box;
+    background-size: cover;
+  background-image: url('../public/assets/landingback.svg');
     min-height: 100vh;
     //padding-bottom: 4rem;
     //padding-top: 2.125rem;
@@ -25,7 +29,7 @@
 .contentContainerHeroV2 {
    // background-color: red;
     padding-left: 5.75rem;
-    //padding-top: 1.875rem;
+  //  padding-top: 1.875rem;
     padding-top: 1rem;
    // max-width: 48%;
     max-width: 43.2rem;
@@ -116,10 +120,10 @@
     font-family: "Helvetica Neue";
     font-size: 2.34375rem;
     font-style: normal;
-    background-color: rgba(37, 37, 37, .81);
-    backdrop-filter: blur(31px);
+   // background-color: rgba(37, 37, 37, .81);
+    backdrop-filter: blur(6px);
     border-radius: 14px;
-    filter: drop-shadow(0px 0px 6px rgba(27, 27, 27, .3));
+   // filter: drop-shadow(0px 0px 6px rgba(27, 27, 27, .1));
     box-shadow: 0px 5px 3px 0px rgba(27, 27, 27, .2);
     font-weight: 500;
     line-height: 120%;
@@ -175,17 +179,27 @@
     letter-spacing: -.25px;
   }
   .propositionContainer {
-    background: #5b6249;
+   // background: #5b6249;
+    background-color: #252525;
     background: linear-gradient(0deg, #252525 20%, rgba(139, 139, 139, 0.00)50%, #5b6249 90%);
     //background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
-    height: fit-content; // set to 100vh maybe
+    height: auto; // set to 100vh maybe
     width: 100%;
     display: flex;
    // margin-top: 4rem;
     flex-direction: column;
     z-index: 0;
-    padding-bottom: 4rem;
-
+    //padding-bottom: 4rem;
+    background-repeat: no-repeat;
+    //background-color: red;
+    //background-position: center 40.5%;
+    background-position: center 38.5%;
+   // background-position: center;
+  // background-clip: border-box;
+    background-size: cover;
+   // background-position: center;
+    
+    background-image: url('../public/assets/canvas2.svg');
   }
   .propositionHeaderContainer {
     display: flex;
@@ -293,7 +307,8 @@ transform: translateX(-3.125%) translateY(-2.75%);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 6.925rem;
+ // margin-bottom: 6.925rem;
+  margin-bottom: 10rem;
 }
 .formHeaderContainer {
   display: flex;
@@ -402,4 +417,13 @@ transform: translateX(-3.125%) translateY(-2.75%);
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+}
+.landingGraphic {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-width: 100%;
+  min-height: 100%;
+  background-image: url('../public/assets/landing.svg');
+  position: absolute;
 }
