--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -214,7 +214,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url('../public/photos/growth.png');
+    background-image: url('../public/assets/community5.png');
 }
 .educationWrapperImageBottom {
     //width: 42rem;
