--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -411,9 +411,10 @@ transform: translateX(-3.125%) translateY(-2.75%);
   filter: invert(1);
 }
 .footerImage {
-  background-image: url('../public/photos/pr-andrew.png');
-  background-size: contain;
+  background-image: url('../public/assets/footer5.png');
+  background-size: cover;
   background-position: center;
+  filter: contrast(.95) brightness(.95);
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
