started mobile breakpoint

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -250,11 +250,12 @@
     margin-left: auto;
    // padding-top: 1.625rem;
    // position: absolute;
+  //  position: absolute;
 
     margin-top: 1.625rem;
     align-items: flex-end;
     display: flex;
-    position: relative;
+   // position: relative;
     margin-right: auto;
     justify-content: flex-end;
    // background-color: #7c8874;
