--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -449,7 +449,7 @@
 .bottomContentLeft {
    // width:46.7362vw;
     width: 45%;
-    background-color: red;
+    //background-color: red;
   //  width: 45%;
     height: 100%;
     display: flex;
