--- a/app/globals.css
+++ b/app/globals.css
@@ -88,13 +88,14 @@ html {
   /*min-width: 100vw;*/
  /* min-height: 100vh;*/
   overflow-y: auto;
-
+  overflow-x: hidden;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   overflow-y: auto;
 
+  overflow-x: hidden;
 /*  max-width: 100vw;*/
   width: 100vw;
   height: 100%;
@@ -115,6 +116,7 @@ a {
   body {
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
     overflow-y: scroll;
     /*background: linear-gradient(180deg,#303C30 ,#212a21 60%);*/
     background: #575E45;
@@ -126,6 +128,7 @@ a {
     padding:0;
     margin:0;
     background: #303C30;
+    overflow-x: hidden;
 
   }
 }
