--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -577,21 +577,28 @@
     // 1. Learn
     .propositionTopContent {
         display: flex;
+    
         width: 100%;
         min-height: fit-content;
         z-index: 2;
         flex-direction: column;
         gap:2.25rem;
-        justify-content: flex-start;
+        margin-left: 0;
+       // background-color: red;
+       // justify-content: center;
+        align-items: center;
         margin-top: 0rem;
     }
     .propositionTopLeft {
         display: flex;
+        margin-left: auto;
+        margin-right: auto;
         align-items: flex-start;
+       // background-color: red;
         justify-content: center;
-        width: 100%;
+        width: 82.5%;
         padding-top: 1.125rem;
-        padding-left: .875rem;
+        padding-left: 0;
         height: 100%;
         z-index: 1;
     }
@@ -603,9 +610,12 @@
     }
     .propositionTopRight {
         width: 100%;
-      //  background-color: red;
+        min-width: 100%;
+       // background-color: blue;
         padding-left: 0;
-        height: 15rem;
+     
+        height: 16.75rem;
+
         display: flex;
        // justify-content: center;
         padding-top: 0;
@@ -661,7 +671,7 @@
       //  padding-bottom: .7rem;
       //  border-bottom: 3px solid #E3A77C;
         font-weight: 700;
-        line-height: 120%; /* 55.808px */
+        line-height: 126%; /* 55.808px */
 
         display: inline;
         letter-spacing: -1px;
@@ -671,8 +681,8 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        padding-top:2rem;
-        padding-left: 1.5rem;
+        padding-top:1.5rem;
+        padding-left: 0;
        // transform: rotate(0.5deg);
     }
     .fontWeight500 {
@@ -735,6 +745,7 @@
     .midWrapper {
         width:100%;
         margin-top:2rem;
+        margin-bottom: 3rem;
         height: fit-content;
         display: flex;
         flex-direction: column-reverse;
@@ -746,7 +757,9 @@
         display: flex;
         z-index: 1;
         margin-top: 2rem;
-
+        margin-left: auto;
+        margin-right: auto;
+     
     //  outline:1px solid #FAF3D6;
     // background-color: #252525;
     }
@@ -777,7 +790,7 @@
     }
     .midWrapperRight {
         width: 100%;
-        padding-right: 2rem;
+        padding-right: 1.75rem;
         height: 100%;
         align-items: center;
         justify-content: center;
@@ -852,9 +865,10 @@
     }
     .midRightContext {
         text-align: right;
-        width: 100%;
+        width: 94%;
 
         display: inline;
+       // background-color: red;
       
         transform: translateX(0);
     //  padding-top:4.375rem;
@@ -947,10 +961,10 @@
         line-height: 121.98%; /* 19.026px */
         letter-spacing: -0.468px;
         padding-top: 1px;
-        transform: translateX(.45rem) translateY(.2rem);
+        transform: translateX(0) translateY(.2rem);
     }
     .bottomIconText {
-        color: #7978F8;
+        color: rgb(155, 155, 246);
         font-family: Helvetica Neue;
        // font-size: 18.75px;
         font-size: 1.171875rem;
@@ -965,7 +979,7 @@
         min-width: fit-content;
         display: flex;
 
-        padding-left: .425rem;
+        padding-left: 0;
   
         align-items: center;
         gap:2rem;
@@ -1015,15 +1029,17 @@
     }
     .caseStudiesButton {
         width: fit-content;
-        height:3rem;
+       // height: 3rem;
+        height:3.5rem;
+        min-height: 3.5rem;
         padding-left:1.5rem;
         padding-right: 1.5rem;
-        padding-top: .4rem;
-        padding-bottom: .4rem;
+        padding-top: 0;
+        padding-bottom: 0;
         font-family: Helvetica Neue;
         //font-size: 22.5px;
         font-size: clamp(1.125rem, 4.125vw, 1.375rem);
-
+        
         flex-shrink: 0;
         border-radius: 90.75px;
         border: 2px solid #F9F9F9;
