finished mobile breakpoint and policy

--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -104,6 +104,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+.educationAccessButton:hover {
+    transform: translateY(-2.65rem);
+}
 .educationSeperator {
     margin-left: auto;
     margin-right:5.75rem;
