--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -675,7 +675,7 @@
 
         display: inline;
         letter-spacing: -1px;
-        padding-bottom: .25rem;
+        padding-bottom: 0.1rem;
     }
     .topLeftContext {
         width: 100%;
