--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -2639,27 +2639,32 @@ padding-bottom: 5rem;
   // footer
 
   .footerContainer {
+   // background-color: red;
   
     max-height: fit-content;
     min-height: fit-content;
-   // height: auto;
+    height: auto;
     width: 100%;
     //width: 100%;
-    background-color: #252525;
+   // background-color: #252525;
     padding-bottom: 3.75rem;
     display: flex;
     flex-direction: column;
     padding-left:0;
     margin-top: 0;
+    padding-top: 0rem;
   }
   .footerContent {
     height: fit-content;
     width: 100%;
-    margin-top: 3.5rem;
+    margin-top: 0;
+   // margin-top: 3.5rem;
+   padding-left: 0;
     text-align: center;
 
     text-align: left;
     //background-color: red;
+    flex-direction: column;
     display: flex;
     margin-left: 0;
 
@@ -2675,6 +2680,7 @@ padding-bottom: 5rem;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+
   
   }
   .footerButton {
@@ -2723,6 +2729,7 @@ padding-bottom: 5rem;
     font-style: normal;
     font-weight: 700;
 
+
     line-height: 121.98%; /* 64.039px */
     letter-spacing: -1.575px;
   }
@@ -2740,11 +2747,21 @@ padding-bottom: 5rem;
     letter-spacing: -0.787px;
   }
   .footerImageContainer {
-    border-radius: 37.5px;
-    width: 43.645vw;
-    height: 100%;
-    transform: translateX(6.45vw);
-    display: none;
+   // border-radius: 37.5px;
+    border-top-left-radius: 37.5px;
+    border-bottom-left-radius: 37.5px;
+
+    //width: 43.645vw;
+    width: 95%;
+    height: 13.75rem;
+    //background-color: blue;
+   // height: 100%;
+    min-height: 13rem;
+    transform: translateX(0);
+    //transform: translateX(6.45vw);
+    margin-left: auto;
+    margin-right: 0;
+  //  display: none;
    // display: flex;
     align-items: center;
     justify-content: center;
